Change 100vh to 100% to see if that fixes the layout on mobile

--- a/src/components/settings-menu.css
+++ b/src/components/settings-menu.css
@@ -16,7 +16,7 @@
 }
 
 .settings-menu-backdrop {
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   position: absolute;
   top: 0;
