--- a/src/main.css
+++ b/src/main.css
@@ -21,7 +21,7 @@
 body {
   margin: 0;
   display: flex;
-  min-height: 100vh;
+  min-height: 100%;
   overflow: hidden;
 
   position: fixed;
